# swe-vending

./: .env  .gitignore  .pre-commit-config.yaml  README.md  app.py  homework.py  pyproject.toml  run.py  sonar-project.properties  test.py
.github/workflows/: python-tests.yml
database/: db_manager.py
routes/api/: vending_machine_routes.py
services/: vending_machine_service.py
tests/: test_endpoint_api.py  test_vending_machine_service.py
